Update 'cigeqce6z-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-889492a693.0jv5.p3.openshiftapps.com/rhtap/rhtap-qe:4f86e083d264231dbccccd52c9e20e03d4cc0dcb@sha256:c4bcb413ab2a012c8b5095d47b4ed04978baf33fb06408fa2bf401ee8f0288c9

--- a/components/cigeqce6z-go/overlays/development/deployment-patch.yaml
+++ b/components/cigeqce6z-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: cigeqce6z-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-889492a693.0jv5.p3.openshiftapps.com/rhtap/rhtap-qe:4f86e083d264231dbccccd52c9e20e03d4cc0dcb@sha256:c4bcb413ab2a012c8b5095d47b4ed04978baf33fb06408fa2bf401ee8f0288c9
+          name: container-image
